# ere

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: build-image.sh  fetch-zkvm-version.sh  free-up-disk-space.sh  pull-or-build-base-zkvm-image.sh  show-program-vk-and-proof-size.py
.github/workflows/: build-and-push-images.yml  check-fmt.yml  check-pr-title.yml  check-zkvm-version.yml  push-semver-image-tag.yml  push-semver-tag.yml  release-bindings.yml  release.yml  rust-checks.yml  test-bindings.yml  test-common.yml  test-verifier.yml  test-zkvm-airbender.yml  test-zkvm-jolt.yml  test-zkvm-miden.yml  test-zkvm-nexus.yml  test-zkvm-openvm.yml  test-zkvm-pico.yml  test-zkvm-risc0.yml  test-zkvm-sp1.yml  test-zkvm-ziren.yml  test-zkvm-zisk.yml  test-zkvm-zkm.yml  test-zkvm.yml
bindings/c/: Cargo.toml  build.rs
bindings/c/src/: error.rs  lib.rs
bindings/c/tests/: verifier.rs
bindings/golang/: go.mod  verifier.go  verifier_test.go
bindings/scripts/: build.sh
crates/catalog/: Cargo.toml  build.rs
crates/catalog/src/: compiler.rs  lib.rs  zkvm.rs
crates/cluster-client/zisk/: Cargo.toml
crates/cluster-client/zisk/proto/: zisk_coordinator_api.proto  zisk_distributed_api.proto
crates/cluster-client/zisk/src/: api.rs  client.rs  error.rs  lib.rs  test.rs
crates/codec/: Cargo.toml
crates/compiler/airbender/: Cargo.toml
crates/compiler/airbender/src/: error.rs  lib.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/compiler/airbender/src/rust_rv32ima/: link.x  memory.x
crates/compiler/cli/: Cargo.toml
crates/compiler/cli/src/: main.rs
crates/compiler/openvm/: Cargo.toml
crates/compiler/openvm/src/: error.rs  lib.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/compiler/risc0/: Cargo.toml
crates/compiler/risc0/src/: error.rs  lib.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/compiler/zisk/: Cargo.toml
crates/compiler/zisk/src/: go_customized.rs  lib.rs  rust_rv64ima.rs  rust_rv64ima_customized.rs
crates/dockerized/: Cargo.toml  build.rs
crates/dockerized/common/: Cargo.toml  build.rs
crates/dockerized/common/src/: compiler.rs  lib.rs  zkvm.rs
crates/dockerized/compiler/: Cargo.toml
crates/dockerized/compiler/src/: lib.rs  main.rs
crates/dockerized/dockerized/: build.rs
crates/dockerized/dockerized/src/: docker.rs  lib.rs
crates/dockerized/server/: Cargo.toml
crates/dockerized/server/proto/: api.proto
crates/dockerized/server/src/: api.rs  client.rs  lib.rs  main.rs  otel.rs  server.rs  test.rs
crates/dockerized/src/: compiler.rs  image.rs  lib.rs  output.rs  prover.rs  util.rs  zkvm.rs
crates/dockerized/src/compiler/: error.rs
crates/dockerized/src/prover/: error.rs
crates/dockerized/src/util/: cuda.rs  docker.rs  env.rs
crates/dockerized/src/zkvm/: error.rs
crates/ere-cli/: Cargo.toml
crates/ere-dockerized/: Cargo.toml  build.rs
crates/ere-jolt/: Cargo.toml
crates/ere-openvm/: Cargo.toml
crates/ere-risc0/: Cargo.toml  build_script_template.rs  compose.yml  gpu_prover_agent.yml  sample.env
crates/ere-risc0/src/: compile.rs  compile_stock_rust.rs  error.rs  lib.rs
crates/ere-risc0/src/prove/: bento.rs
crates/ere-server/: build.rs
crates/ere-sp1/: Cargo.toml
crates/ere-zisk/: Cargo.toml
crates/ere-zkm/: Cargo.toml  build.rs
crates/ere-zkm/src/: compile.rs  error.rs  lib.rs
crates/io/: Cargo.toml
crates/io-serde/: Cargo.toml
crates/io-serde/src/: bincode.rs  cbor.rs  lib.rs
crates/io/src/: lib.rs  rkyv.rs  serde.rs
crates/io/src/serde/: bincode.rs  cbor.rs
crates/platform/airbender/: Cargo.toml
crates/platform/airbender/src/: lib.rs  platform.rs
crates/prover/airbender/: Cargo.toml
crates/prover/airbender/src/: error.rs  lib.rs  prover.rs  sdk.rs
crates/prover/airbender/src/compiler/: rust_rv32ima.rs
crates/prover/airbender/src/prover/: error.rs  sdk.rs
crates/prover/core/: Cargo.toml
crates/prover/core/src/: compiler.rs  error.rs  input.rs  lib.rs  prover.rs  report.rs  resource.rs
crates/prover/core/src/prover/: error.rs  resource.rs
crates/prover/openvm/: Cargo.toml
crates/prover/openvm/src/: error.rs  lib.rs  prover.rs
crates/prover/openvm/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/prover/openvm/src/prover/: error.rs
crates/prover/risc0/: Cargo.toml
crates/prover/risc0/src/: error.rs  lib.rs  prover.rs
crates/prover/risc0/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/prover/risc0/src/prover/: error.rs
crates/prover/sp1/: Cargo.toml
crates/prover/sp1/src/: compiler.rs  error.rs  lib.rs  prover.rs  sdk.rs
crates/prover/sp1/src/compiler/: rust_rv64ima.rs  rust_rv64ima_customized.rs
crates/prover/sp1/src/prover/: error.rs  sdk.rs
crates/prover/zisk/: Cargo.toml  build.rs
crates/prover/zisk/src/: error.rs  lib.rs  prover.rs  sdk.rs
crates/prover/zisk/src/compiler/: go_customized.rs  rust_rv64ima.rs  rust_rv64ima_customized.rs
crates/prover/zisk/src/prover/: error.rs  sdk.rs
crates/prover/zisk/src/prover/sdk/: cluster.rs  local.rs
crates/prover/zisk/src/sdk/: local.rs
crates/server/api/: Cargo.toml
crates/server/api/proto/: api.proto
crates/server/api/src/: api.rs  lib.rs  test.rs
crates/server/cli/: Cargo.toml
crates/server/cli/src/: commands.rs  gpu_metrics.rs  main.rs  metrics.rs  otel.rs  server.rs
crates/server/cli/src/commands/: keygen.rs  server.rs
crates/server/client/: Cargo.toml
crates/server/client/src/: client.rs  lib.rs  test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: guest.rs  host.rs  lib.rs  program.rs
crates/test-utils/src/program/: basic.rs
crates/util/test/: Cargo.toml
crates/util/test/src/: codec.rs  host.rs  lib.rs  program.rs
crates/util/test/src/program/: basic.rs
crates/verifier/airbender/: Cargo.toml  build.rs
crates/verifier/airbender/src/: error.rs  lib.rs  program_vk.rs  proof.rs  vendor.rs  verifier.rs
crates/verifier/airbender/src/verifier/: unified.vk  vk.rs
crates/verifier/airbender/tests/: verifier.rs
docker/: Dockerfile.base
scripts/: install_tamago.sh
(+361 files in other folders)
