[workspace]
members = [
    # zkVM interface
    "crates/zkvm-interface",
    "crates/zkvm-interface/platform",
    # zkVMs
    "crates/zkvm/airbender",
    "crates/zkvm/airbender/platform",
    "crates/zkvm/jolt",
    "crates/zkvm/jolt/platform",
    "crates/zkvm/miden",
    "crates/zkvm/nexus",
    "crates/zkvm/nexus/platform",
    "crates/zkvm/openvm",
    "crates/zkvm/openvm/platform",
    "crates/zkvm/pico",
    "crates/zkvm/pico/platform",
    "crates/zkvm/risc0",
    "crates/zkvm/risc0/platform",
    "crates/zkvm/sp1",
    "crates/zkvm/sp1/platform",
    "crates/zkvm/ziren",
    "crates/zkvm/ziren/platform",
    "crates/zkvm/zisk",
    "crates/zkvm/zisk/platform",
    # Dockerized zkVM
    "crates/dockerized",
    "crates/dockerized/compiler",
    "crates/dockerized/server",
    # Utils
    "crates/io-serde",
    "crates/build-utils",
    "crates/compile-utils",
    "crates/test-utils",
]
resolver = "2"

[workspace.package]
version = "0.0.14"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]

[workspace.dependencies]
anyhow = "1.0.98"
auto_impl = "1.3.0"
bincode = { version = "2.0.1", default-features = false }
blake3 = "1.8.2"
borsh = "1.5.7"
bytemuck = "1.23.1"
cargo_metadata = "0.19.0"
clap = "4.5.42"
dashmap = "6.1.0"
digest = { version = "0.10.7", default-features = false }
eyre = "0.6.12"
indexmap = "2.10.0"
postcard = { version = "1.0.8", default-features = false }
prost = "0.13"
prost-build = "0.13"
rand = "0.9.2"
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.9", default-features = false }
strum = "0.27.2"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.0"
toml = "0.8.23"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twirp = "0.9.1"
twirp-build = "0.9.0"

# Airbender dependencies
airbender_execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", package = "execution_utils", tag = "v0.5.0" }
airbender_riscv_common = { git = "https://github.com/matter-labs/zksync-airbender", package = "riscv_common", tag = "v0.5.0" }

# Jolt dependencies
jolt-ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", package = "ark-serialize", branch = "feat/fewer-reductions" }
jolt-common = { git = "https://github.com/a16z/jolt.git", package = "common", tag = "v0.3.0-alpha", default-features = false }
jolt-core = { git = "https://github.com/a16z/jolt.git", tag = "v0.3.0-alpha" }
jolt-sdk = { git = "https://github.com/a16z/jolt.git", tag = "v0.3.0-alpha", default-features = false }

# Miden dependencies
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }
miden-core = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }
miden-prover = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }
miden-verifier = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.18.3" }

# Nexus dependencies
nexus-core = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.5" }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.5" }
nexus-vm = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.5" }
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.5" }

# OpenVM dependencies
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.1" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }

# Pico dependencies
pico-p3-field = { git = "https://github.com/brevis-network/Plonky3.git", package = "p3-field", rev = "a4d376b" }
pico-vm = { git = "https://github.com/brevis-network/pico.git", tag = "v1.1.7" }
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.1.7" }

# Risc0 dependencies
risc0-binfmt = { version = "3.0.2", default-features = false }
risc0-build = "3.0.3"
risc0-zkp = { version = "3.0.2", default-features = false }
risc0-zkvm = { version = "3.0.3", default-features = false }

# SP1 dependencies
sp1-sdk = "5.2.2"
sp1-zkvm = "5.2.2"

# Ziren dependencies
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren.git", tag = "v1.2.1" }
zkm-zkvm = { git = "https://github.com/ProjectZKM/Ziren.git", tag = "v1.2.1" }

# ZisK dependencies
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.13.0" }

# Local dependencies
ere-zkvm-interface = { path = "crates/zkvm-interface" }
ere-platform-trait = { path = "crates/zkvm-interface/platform" }

ere-airbender = { path = "crates/zkvm/airbender", default-features = false }
ere-jolt = { path = "crates/zkvm/jolt", default-features = false }
ere-miden = { path = "crates/zkvm/miden", default-features = false }
ere-nexus = { path = "crates/zkvm/nexus", default-features = false }
ere-openvm = { path = "crates/zkvm/openvm", default-features = false }
ere-pico = { path = "crates/zkvm/pico", default-features = false }
ere-risc0 = { path = "crates/zkvm/risc0", default-features = false }
ere-sp1 = { path = "crates/zkvm/sp1", default-features = false }
ere-ziren = { path = "crates/zkvm/ziren", default-features = false }
ere-zisk = { path = "crates/zkvm/zisk", default-features = false }

ere-platform-airbender = { path = "crates/zkvm/airbender/platform" }
ere-platform-jolt = { path = "crates/zkvm/jolt/platform" }
ere-platform-nexus = { path = "crates/zkvm/nexus/platform" }
ere-platform-openvm = { path = "crates/zkvm/openvm/platform" }
ere-platform-pico = { path = "crates/zkvm/pico/platform" }
ere-platform-risc0 = { path = "crates/zkvm/risc0/platform" }
ere-platform-sp1 = { path = "crates/zkvm/sp1/platform" }
ere-platform-ziren = { path = "crates/zkvm/ziren/platform" }
ere-platform-zisk = { path = "crates/zkvm/zisk/platform" }

ere-dockerized = { path = "crates/dockerized" }
ere-compiler = { path = "crates/dockerized/compiler" }
ere-server = { path = "crates/dockerized/server" }

ere-io-serde = { path = "crates/io-serde" }
ere-build-utils = { path = "crates/build-utils" }
ere-compile-utils = { path = "crates/compile-utils" }
ere-test-utils = { path = "crates/test-utils" }

[patch.crates-io]
# These patches are only needed by Jolt
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
