[workspace]
members = [
    # zkVM interface
    "crates/zkvm-interface",
    "crates/zkvm-interface/platform",
    # zkVMs
    "crates/zkvm/airbender",
    "crates/zkvm/airbender/platform",
    "crates/zkvm/jolt",
    "crates/zkvm/jolt/platform",
    "crates/zkvm/openvm",
    "crates/zkvm/openvm/platform",
    "crates/zkvm/pico",
    "crates/zkvm/pico/platform",
    "crates/zkvm/risc0",
    "crates/zkvm/risc0/platform",
    "crates/zkvm/sp1",
    "crates/zkvm/sp1/platform",
    "crates/zkvm/zisk",
    "crates/zkvm/zisk/platform",
    # Dockerized zkVM
    "crates/dockerized",
    "crates/dockerized/common",
    "crates/dockerized/compiler",
    "crates/dockerized/server",
    # Utils
    "crates/io",
    "crates/build-utils",
    "crates/compile-utils",
    "crates/test-utils",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.lints]

[workspace.dependencies]
anyhow = "1.0.98"
auto_impl = "1.3.0"
bincode = { version = "2.0.1", default-features = false }
blake3 = "1.8"
bytemuck = "1.25.0"
cargo_metadata = "0.19.0"
ciborium = { version = "0.2.2", default-features = false }
ciborium-io = { version = "0.2.2", default-features = false }
clap = "4.5.42"
digest = { version = "0.10.7", default-features = false }
eyre = "0.6.12"
fnv = { version = "1.0.7", default-features = false }
futures-util = "0.3"
http = "1"
indexmap = "2.10.0"
mpi = "0.8.0"
parking_lot = "0.12.5"
paste = "1.0.15"
postcard = { version = "1.0.8", default-features = false }
prost = "0.14"
prost-build = "0.14"
rand = "0.9.2"
rkyv = { version = "0.8.12", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_bytes = { version = "0.11.19", default-features = false }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.9", default-features = false }
strum = "0.27.2"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.0"
toml = "0.8.23"
tonic = "0.14"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twirp = "0.10"
twirp-build = "0.10"
uuid = "1"

# Airbender dependencies
airbender_execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", package = "execution_utils", tag = "v0.5.2" }
airbender_riscv_common = { git = "https://github.com/matter-labs/zksync-airbender", package = "riscv_common", tag = "v0.5.2", default-features = false }

# Jolt dependencies
jolt-ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", package = "ark-serialize", branch = "dev/twist-shout" }
jolt-common = { git = "https://github.com/a16z/jolt.git", package = "common", rev = "2e05fe88", default-features = false }
jolt-core = { git = "https://github.com/a16z/jolt.git", rev = "2e05fe88", default-features = false }
jolt-sdk = { git = "https://github.com/a16z/jolt.git", rev = "2e05fe88", default-features = false }
jolt-inlines-keccak256 = { git = "https://github.com/a16z/jolt.git", rev = "2e05fe88", features = ["host"] }
jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt.git", rev = "2e05fe88", features = ["host"] }
jolt-inlines-sha2 = { git = "https://github.com/a16z/jolt.git", rev = "2e05fe88", features = ["host"] }


# OpenVM dependencies
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.3" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3", default-features = false }

# Pico dependencies
pico-p3-field = { git = "https://github.com/brevis-network/Plonky3.git", package = "p3-field", rev = "f5056c9" }
pico-vm = { git = "https://github.com/brevis-network/pico.git", tag = "v1.3.0" }
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.3.0", default-features = false }

# Risc0 dependencies
risc0-binfmt = { version = "3.0.3", default-features = false }
risc0-build = "3.0.4"
risc0-zkp = { version = "3.0.3", default-features = false }
risc0-zkvm = { version = "3.0.4", default-features = false }
risc0-zkvm-platform = { version = "2.2.1", default-features = false }

# SP1 dependencies
sp1-cuda = "6.0.1"
sp1-hypercube = "6.0.1"
sp1-recursion-executor = "6.0.1"
sp1-sdk = "6.0.1"
sp1-p3-field = { version = "0.3.2-succinct", package = "p3-field" }
sp1-zkvm = { version = "6.0.1", default-features = false }


# ZisK dependencies
ziskos = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0" }
zisk-rom-setup = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0", package = "rom-setup" }
zisk-sdk = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0" }
zisk-core = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0" }
ziskemu = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0" }
zisk-distributed-grpc-api = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.0" }
proofman-common = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.0" }
proofman-util = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.0" }
proofman-fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.0", package = "fields" }
proofman-starks-lib-c = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.0" }
proofman-verifier = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.0" }

# Local dependencies
ere-zkvm-interface = { path = "crates/zkvm-interface" }
ere-platform-trait = { path = "crates/zkvm-interface/platform" }

ere-airbender = { path = "crates/zkvm/airbender", default-features = false }
ere-jolt = { path = "crates/zkvm/jolt", default-features = false }
ere-openvm = { path = "crates/zkvm/openvm", default-features = false }
ere-pico = { path = "crates/zkvm/pico", default-features = false }
ere-risc0 = { path = "crates/zkvm/risc0", default-features = false }
ere-sp1 = { path = "crates/zkvm/sp1", default-features = false }
ere-zisk = { path = "crates/zkvm/zisk", default-features = false }

ere-platform-airbender = { path = "crates/zkvm/airbender/platform" }
ere-platform-jolt = { path = "crates/zkvm/jolt/platform" }
ere-platform-openvm = { path = "crates/zkvm/openvm/platform" }
ere-platform-pico = { path = "crates/zkvm/pico/platform" }
ere-platform-risc0 = { path = "crates/zkvm/risc0/platform" }
ere-platform-sp1 = { path = "crates/zkvm/sp1/platform" }
ere-platform-zisk = { path = "crates/zkvm/zisk/platform" }

ere-dockerized = { path = "crates/dockerized" }
ere-common = { path = "crates/dockerized/common" }
ere-compiler = { path = "crates/dockerized/compiler" }
ere-server = { path = "crates/dockerized/server" }

ere-io = { path = "crates/io" }
ere-build-utils = { path = "crates/build-utils" }
ere-compile-utils = { path = "crates/compile-utils" }
ere-test-utils = { path = "crates/test-utils" }

[patch.crates-io]
# These patches are only needed by Jolt
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
