[workspace]
members = [
    # Compiler
    "crates/compiler/cli",
    "crates/compiler/core",
    "crates/compiler/airbender",
    "crates/compiler/openvm",
    "crates/compiler/risc0",
    "crates/compiler/sp1",
    "crates/compiler/zisk",
    # Platform
    "crates/platform/core",
    "crates/platform/airbender",
    "crates/platform/openvm",
    "crates/platform/risc0",
    "crates/platform/sp1",
    "crates/platform/zisk",
    # Prover
    "crates/prover/core",
    "crates/prover/airbender",
    "crates/prover/openvm",
    "crates/prover/risc0",
    "crates/prover/sp1",
    "crates/prover/zisk",
    # Verifier
    "crates/verifier/core",
    "crates/verifier/airbender",
    "crates/verifier/openvm",
    "crates/verifier/risc0",
    "crates/verifier/sp1",
    "crates/verifier/zisk",
    # Server
    "crates/server/api",
    "crates/server/cli",
    "crates/server/client",
    # Cluster client
    "crates/cluster-client/zisk",
    # Dockerized wrapper
    "crates/dockerized",
    # Util
    "crates/catalog",
    "crates/codec",
    "crates/util/build",
    "crates/util/compile",
    "crates/util/test",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.lints]

[workspace.dependencies]
anyhow = "1.0.98"
auto_impl = "1.3.0"
bincode = { version = "2.0.1", default-features = false }
bitcode = { version = "0.6", default-features = false }
blake3 = "1.8"
bytemuck = "1.25.0"
cargo_metadata = "0.19.0"
ciborium = { version = "0.2.2", default-features = false }
ciborium-io = { version = "0.2.2", default-features = false }
clap = "4.5.42"
digest = { version = "0.10.7", default-features = false }
eyre = "0.6.12"
fnv = { version = "1.0.7", default-features = false }
futures-util = "0.3"
http = "1"
indexmap = "2.10.0"
mpi = "0.8.0"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
parking_lot = "0.12.5"
paste = "1.0.15"
postcard = { version = "1.0.8", default-features = false }
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = "0.9.2"
serde = { version = "1.0.219", default-features = false }
serde-big-array = "0.5.1"
serde_bytes = { version = "0.11.19", default-features = false }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.9", default-features = false }
strum = "0.27.2"
tempfile = "3.20.0"
thiserror = { version = "2.0.12", default-features = false }
tokio = "1.0"
toml = "0.8.23"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3.19"
twirp = "0.10"
twirp-build = "0.10"
uuid = "1"

# Airbender dependencies
airbender_execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", package = "execution_utils", tag = "v0.5.2" }
airbender_riscv_common = { git = "https://github.com/matter-labs/zksync-airbender", package = "riscv_common", tag = "v0.5.2", default-features = false }

# OpenVM dependencies
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.3" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.3" }

# Risc0 dependencies
risc0-binfmt = { version = "3.0.4", default-features = false }
risc0-build = "3.0.5"
risc0-zkp = { version = "3.0.4", default-features = false }
risc0-zkvm = { version = "3.0.5", default-features = false }
risc0-zkvm-platform = { version = "2.2.2", default-features = false }

# SP1 dependencies
sp1-cuda = "6.0.1"
sp1-hypercube = "6.0.1"
sp1-p3-field = { version = "0.3.2-succinct", package = "p3-field" }
sp1-recursion-executor = "6.0.1"
sp1-sdk = "6.0.1"
sp1-zkvm = { version = "6.0.1", default-features = false }

# ZisK dependencies
proofman-common = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.1" }
proofman-fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.1", package = "fields" }
proofman-starks-lib-c = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.1" }
proofman-util = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.1" }
proofman-verifier = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", tag = "v0.16.1" }
zisk-core = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.1" }
zisk-rom-setup = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.1", package = "rom-setup" }
zisk-sdk = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.1" }
ziskemu = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.1" }
ziskos = { git = "https://github.com/han0110/zisk.git", branch = "patch/v0.16.1", default-features = false }

# Local dependencies
ere-compiler = { path = "crates/compiler/cli" }
ere-compiler-core = { path = "crates/compiler/core" }
ere-compiler-airbender = { path = "crates/compiler/airbender" }
ere-compiler-openvm = { path = "crates/compiler/openvm" }
ere-compiler-risc0 = { path = "crates/compiler/risc0" }
ere-compiler-sp1 = { path = "crates/compiler/sp1" }
ere-compiler-zisk = { path = "crates/compiler/zisk" }
ere-platform-core = { path = "crates/platform/core" }
ere-platform-airbender = { path = "crates/platform/airbender" }
ere-platform-openvm = { path = "crates/platform/openvm" }
ere-platform-risc0 = { path = "crates/platform/risc0" }
ere-platform-sp1 = { path = "crates/platform/sp1" }
ere-platform-zisk = { path = "crates/platform/zisk" }
ere-prover-core = { path = "crates/prover/core" }
ere-prover-airbender = { path = "crates/prover/airbender" }
ere-prover-openvm = { path = "crates/prover/openvm" }
ere-prover-risc0 = { path = "crates/prover/risc0" }
ere-prover-sp1 = { path = "crates/prover/sp1" }
ere-prover-zisk = { path = "crates/prover/zisk" }
ere-verifier-core = { path = "crates/verifier/core" }
ere-verifier-airbender = { path = "crates/verifier/airbender" }
ere-verifier-openvm = { path = "crates/verifier/openvm" }
ere-verifier-risc0 = { path = "crates/verifier/risc0" }
ere-verifier-sp1 = { path = "crates/verifier/sp1" }
ere-verifier-zisk = { path = "crates/verifier/zisk" }
ere-server = { path = "crates/server/cli" }
ere-server-api = { path = "crates/server/api" }
ere-server-client = { path = "crates/server/client" }
ere-cluster-client-zisk = { path = "crates/cluster-client/zisk" }
ere-dockerized = { path = "crates/dockerized" }
ere-catalog = { path = "crates/catalog" }
ere-codec = { path = "crates/codec" }
ere-util-build = { path = "crates/util/build" }
ere-util-compile = { path = "crates/util/compile" }
ere-util-test = { path = "crates/util/test" }
