[package]
name = "ere-verifier-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ere-verifier = { workspace = true, features = ["nightly"] }

[dev-dependencies]
paste.workspace = true

[build-dependencies]
cbindgen.workspace = true

[lints]
workspace = true
