[package]
name = "ere-dockerized"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
tracing.workspace = true

# Local dependencies
ere-zkvm-interface = { workspace = true, features = ["clap", "tokio"] }
ere-common.workspace = true
ere-server.workspace = true

[dev-dependencies]
paste.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local dependencies
ere-test-utils = { workspace = true, features = ["host"] }

[lints]
workspace = true
