[package]
name = "ere-dockerized"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
tracing.workspace = true

# Local dependencies
ere-catalog.workspace = true
ere-compiler-core.workspace = true
ere-prover-core = { workspace = true, features = ["clap"] }
ere-server-client.workspace = true
ere-util-tokio.workspace = true

[dev-dependencies]
paste.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local dependencies
ere-util-test = { workspace = true, features = ["host"] }

[lints]
workspace = true
