[package]
name = "ere-risc0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
build-utils = { workspace = true }
anyhow = "1.0"                                               #TODO: remove only needed in tests
#toml = "0.8"
risc0-zkvm = { version = "2.3.0", features = ["unstable"] }
borsh = "1.5.7"
hex = "*"

tempfile = "3.3"
serde_json = "1.0"
thiserror = "2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tracing = "0.1"

[build-dependencies]
build-utils = { workspace = true }

[features]
metal = ["risc0-zkvm/metal"]
# Cuda prover is temporarily disabled, will be re-enabled after
# https://github.com/eth-act/ere/pull/50 is merged, and supports multi-gpus.
cuda = []

[lints]
workspace = true
