[package]
name = "ere-zkm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren.git", tag = "v1.1.2" }
zkm-build = { git = "https://github.com/ProjectZKM/Ziren.git", tag = "v1.1.2" }

zkvm-interface = { workspace = true }
toml = "0.8"
tempfile = "3.3"
bincode = "1.3"
thiserror = "2"
tracing = "0.1"

[build-dependencies]
build-utils.workspace = true


[features]
default = []
cude = ["zkm-sdk/cuda"]


[lints]
workspace = true
