[package]
name = "ere-zkm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkm-sdk = { workspace = true }
zkm-build = { workspace = true }

zkvm-interface = { workspace = true }
toml = "0.8"
bincode = "1.3"
thiserror = "2"
tracing = "0.1"
serde.workspace = true

[build-dependencies]
build-utils.workspace = true


[dev-dependencies]
anyhow = { workspace = true }


[features]
default = []
cude = ["zkm-sdk/cuda"]


[lints]
workspace = true
