[package]
name = "ere-cluster-client-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
http.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

# Zisk dependencies
zisk-distributed-grpc-api.workspace = true

# Local dependencies
ere-prover-core = { workspace = true, features = ["tokio"] }
ere-verifier-zisk.workspace = true

[lints]
workspace = true
