[package]
name = "ere-cluster-client-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
http.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

# Local dependencies
ere-prover-core = { workspace = true, features = ["tokio"] }
ere-verifier-zisk.workspace = true

[dev-dependencies]
tempfile.workspace = true
tonic-prost-build.workspace = true

[lints]
workspace = true
