[package]
name = "ere-cluster-client-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true, features = ["alloc", "serde"] }
http.workspace = true
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tonic.workspace = true
tonic-prost.workspace = true

# Local dependencies
ere-compiler-core.workspace = true
ere-prover-core.workspace = true
ere-verifier-zisk.workspace = true

[dev-dependencies]
tempfile.workspace = true
tonic-prost-build.workspace = true

[lints]
workspace = true
