[package]
name = "ere-compiler-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ere-compiler-core.workspace = true
ere-util-compile.workspace = true
thiserror.workspace = true

[dev-dependencies]
ere-util-test = { workspace = true, features = ["host"] }

[lints]
workspace = true
