[package]
name = "ere-compiler-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

# Local dependencies
ere-compiler-core.workspace = true
ere-util-compile.workspace = true

[dev-dependencies]
ere-util-test = { workspace = true, features = ["host"] }

[lints]
workspace = true
