[package]
name = "ere-compiler-risc0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Risc0 dependencies
risc0-binfmt.workspace = true
risc0-build = { workspace = true, features = ["unstable"] }

# Local dependencies
ere-compiler-core.workspace = true
ere-util-compile.workspace = true

[dev-dependencies]
ere-prover-core.workspace = true
ere-prover-risc0.workspace = true
ere-util-test = { workspace = true, features = ["host"] }

[lints]
workspace = true
