[package]
name = "ere-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local dependencies
ere-airbender = { workspace = true, features = ["compiler"], optional = true }
ere-openvm = { workspace = true, features = ["compiler"], optional = true }
ere-risc0 = { workspace = true, features = ["compiler"], optional = true }
ere-sp1 = { workspace = true, features = ["compiler"], optional = true }
ere-zisk = { workspace = true, features = ["compiler"], optional = true }
ere-zkvm-interface.workspace = true
ere-common.workspace = true

[dev-dependencies]

[features]
default = []

# zkVM
airbender = ["dep:ere-airbender"]
openvm = ["dep:ere-openvm"]
risc0 = ["dep:ere-risc0"]
sp1 = ["dep:ere-sp1"]
zisk = ["dep:ere-zisk"]

[lints]
workspace = true
